--- a/src/main/resources/templates/asistencia/estudiantes.html
+++ b/src/main/resources/templates/asistencia/estudiantes.html
@@ -63,7 +63,7 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                <button type="submit" class="btn btn-primary"><!--Registrar Asistencia--> [[#{asistencia.boton]]</button>
+                                <button type="submit" class="btn btn-primary">[[#{asistencia.boton}]]</button>
                             </form>
                         </div>
                     </div>
